# ga-python

./: README.md  delme.md  pyproject.toml  tox.ini
.github/workflows/: build_caller_check_1_art_green.yaml  build_caller_check_arts_all.yaml  build_caller_check_arts_edit_sdist.yaml  build_caller_check_arts_green.yaml  build_caller_green.yaml
tests/: smoke_test.py
